# ddc-brightness-ctl

./: Cargo.toml  README.md  ddc-brightness-ctl.1
src/: main.rs
