[package]
name = "ddc-brightness-ctl"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/tritoke/ddc-brightness-ctl.git"
license = "MIT OR Apache-2.0"
description = "Display brightness control utility"
readme = "README.md"

[dependencies]
ddc = "0.2.2"
ddc-hi = "0.4.1"
lexopt = "0.3.1"

# try to make the binary a bit smaller
[profile.release]
strip = true
opt-level = "s"
lto = true
